<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ime_name">kasahorowKeyboardForAndroid</string>
    <string name="settings_app_name">kasahorowKeyboardForAndroid Settings</string>
    <string name="spell_checker_service_name">kasahorowKeyboardForAndroid Spell Checker</string>
    <string name="spell_checker_settings">kasahorowKeyboardForAndroid Speller Settings</string>
    <string name="subtype_generic">speller-generic</string>
    <string name="copyright_text">Copyright © <xliff:g id="year">%s</xliff:g><xliff:g id="owner">%s</xliff:g></string>
    <string name="version_text"><xliff:g id="version_name">%s</xliff:g> (v<xliff:g id="version_number">%s</xliff:g>)</string>
    <string name="additional_licenses"><u>Additional licenses…</u></string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point</string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for details.</string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is<xliff:g id="trace_file">%s</xliff:g></string>
    <string name="click_to_restart_suggestions">Click for suggestions</string>
    <string name="tips_notification_text">Click for tips!</string>
    <string name="tips_button">How to use</string>
    <string name="tips_button_description">A few tips about how to use kasahorowKeyboardForAndroid</string>
    <string name="tips_title">kasahorowKeyboardForAndroid tips</string>
    <string name="click_for_previous_tip">↓ Previous tip</string>
    <string name="click_for_next_tip">Next tip ↓</string>
    <string name="tip_1_welcome_to_ask">Welcome to kasahorowKeyboardForAndroid!</string>
    <string name="tip_1_how_to_access_settings">To access the settings; long press the ENTER key. You\'ll find a world
        of customizations there!</string>
    <string name="tip_2_gestures">I support gestures!</string>
    <string name="tip_2_gestures_tip">With a swipe, you can do a lot! Swipe from left to right will switch languages,
        swiping to the left will switch to symbols layout, swiping from the spacebar up will show up a utility keyboard,
        and swiping down will hide the keyboard.\nIt is configurable in the settings (remember? Long pressing the ENTER
        key).</string>
    <string name="tip_3_hidden_kbds">Hidden gems</string>
    <string name="tip_3_hidden_kbds_tip">There are some hidden keyboards:\n1) Swipe your finger from the spacebar and
        up, you\'ll get a utility keyboard with arrows and microphone (for voice input).\n2) Swipe your finger up
        outside the keyboard, and keep it pressed. This is the extension keyboard, with numbers and symbols.</string>
    <string name="tip_4_top_generic_row">Top row</string>
    <string name="tip_4_top_generic_row_tip">The top row is the same on all layouts, and it can be changed! The default
        top row includes symbols key (<i>123</i>), left and right arrow keys, and language key (<i>ABC</i>). You can
        replace this row in settings.</string>
    <string name="tip_4_top_generic_row_go_to_top_row_settings">Change top row now</string>
    <string name="tip_5_key_feedback">Feedback</string>
    <string name="tip_5_key_feedback_tip">Sometimes it is nice to get a non-visual feedback about key presses. I support
        that. So here you go, you can have vibration or sound, or both.</string>
    <string name="tip_5_key_feedback_test">Want to test the feedback?</string>
    <string name="tip_6_bottom_rows">Bottom row</string>
    <string name="tip_6_bottom_rows_tip">As the top row, the bottom row can also be replaced. kasahorowKeyboardForAndroid has
        several types - with or without a mic, iPhone style, etc.</string>
    <string name="tip_6_top_generic_row_go_to_bottom_row_settings">Change bottom row now</string>
    <string name="tip_7_voice_input">Talk to me*</string>
    <string name="tip_7_voice_input_tip">Typing is nice, but there is also support for voice input! Want to dictate the
        text? Click the microphone key, and talk away!\nThis feature uses Google\'s state-of-the-art voice recognition
        technology, so be sure it works :)</string>
    <string name="tip_7_voice_input_tip_dont_forget_bottom_row">If you want to always have the mic icon, make sure you
        have the correct bottom row (previous tip, remember?).\nAnyway, mic is always accessible via the hidden utility
        keyboard (swipe up from the spacebar).</string>
    <string name="tip_7_voice_input_tip_note">* Requires Android 2.2+ and Internet connection to work.</string>
    <string name="tip_8_suggestions">I complete you</string>
    <string name="tip_8_suggestions_tip">Depending on you language support level, kasahorowKeyboardForAndroid can help you finish
        your words and correct your typos. As you start typing, kasahorowKeyboardForAndroid will suggest words based on what you
        already typed.</string>
    <string name="tip_8_suggestions_editor">If I don\'t know a word, you can teach me! Type that word, and click it in
        the suggestions strip. I\'ll remember it.\nYou can also edit those User-Words in our built-in editor. Look for
        the editor in kasahorowKeyboardForAndroid Dictionary Settings.</string>
    <string name="tip_9_suggestions_restart">Suggestions Restarting</string>
    <string name="tip_9_suggestions_restart_tip">kasahorowKeyboardForAndroid provides word completion suggestions based on what you
        typed. But, kasahorowKeyboardForAndroid can also provide suggestions on already typed words! Tap the word, and
        kasahorowKeyboardForAndroid will refresh the suggestions strip.</string>
    <string name="main_tab_welcome">Welcome</string>
    <string name="main_tab_links">Links</string>
    <string name="main_tab_credits">Credits</string>
    <string name="how_to_pointer_title">Welcome to kasahorowKeyboardForAndroid</string>
    <string name="how_to_pointer_version_prefix">Version:</string>
    <string name="how_to_pointer_not_app">kasahorowKeyboardForAndroid is not a regular application - it is a on-screen keyboard
        replacement.</string>
    <string name="how_to_pointer_go_to_links">For further information, go to the Links tab.</string>
    <string name="how_to_pointer_how_to_url">Details about how to use this keyboard:</string>
    <string name="how_to_pointer_site">General details:</string>
    <string name="how_to_pointer_changelog">Details about the latest version:</string>
    <string name="how_to_pointer_issues">Bug reporting:</string>
    <string name="main_tab_credits_title">This application was created with the help of the following people-</string>
    <string name="main_tab_credits_created_by">Created by:</string>
    <string name="main_tab_credits_additional_work_by">Additional coding work by:</string>
    <string name="main_tab_credits_localization_by">Localization efforts by:</string>
    <string name="main_tab_credits_GUI_by">UI images by:</string>
    <string name="how_to_enable_dialog_title">Enable kasahorowKeyboardForAndroid\?</string>
    <string name="how_to_enable_dialog_text">kasahorowKeyboardForAndroid is not activated yet. Do you want me to show you how to
        activate?</string>
    <string name="how_to_enable_dialog_show_me">Show me!</string>
    <string name="how_to_enable_dialog_dont_show_me">Later</string>
    <string name="how_to_simple_howto_preface">Android requires that you (the user) will manually enable and activate
        external keyboards. Here is how:</string>
    <string name="how_to_simple_howto_enable_ask">Step 1: Enable kasahorowKeyboardForAndroid (it will warn you about possible
        key-logging, don\'t worry, kasahorowKeyboardForAndroid does not keep data, and does not send it anywhere) :</string>
    <string name="how_to_simple_howto_enable_ask_button">Enable kasahorowKeyboardForAndroid</string>
    <string name="how_to_simple_howto_press_back_to_return_tip">Press BACK once done, to get back to activation
        instructions</string>
    <string name="how_to_simple_howto_switch_to_ask">Step 2: Select kasahorowKeyboardForAndroid as your active Input Method:</string>
    <string name="how_to_simple_howto_switch_to_ask_button_after_step_1">Switch to kasahorowKeyboardForAndroid</string>
    <string name="how_to_simple_howto_switch_to_ask_button_before_step_1">First do step 1</string>
    <string name="how_to_simple_howto_go_to_settings">Step 3 (optional): kasahorowKeyboardForAndroid is very customizable. Change
        stuff! You can do that later by long-press the ENTER key.</string>
    <string name="how_to_simple_howto_go_to_settings_button">kasahorowKeyboardForAndroid\'s settings</string>
    <string name="ime_name_beta">kasahorowKeyboardForAndroid BETA</string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="notification_text_changelog">Click to learn what\'s new.</string>
    <string name="notification_title_how_to_enable">Welcome to kasahorowKeyboardForAndroid</string>
    <string name="notification_text_how_to_enable">Learn how to enable</string>
    <string name="testers_version">Testers build!</string>
    <string name="license_title">License</string>
    <string name="languages_cat">Languages</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="no_market_store_available">Could not find Android Play Store on your device. Unable to search for
        add-ons!</string>
    <string name="theme_addons_settings">Keyboard theme settings</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="keyboard_theme_tweak_hints_group">Hint text tweaks</string>
    <string name="bottom_row_addons_settings">Bottom row settings</string>
    <string name="top_row_addons_settings">Top row settings</string>
    <string name="close_button">Close</string>
    <string name="how_to_active_text">How to active kasahorowKeyboardForAndroid</string>
    <string name="added_word">Saved:<xliff:g id="word">%s</xliff:g></string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:<xliff:g id="word">%s</xliff:g></string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="gingerbread_keyboard_theme_name">Gingerbread styled</string>
    <string name="gingerbread_keyboard_theme_description">Gingerbread (Android 2.3) styled buttons and colors</string>
    <string name="dark_plain_keyboard_theme_name">Plain dark theme</string>
    <string name="dark_plain_keyboard_theme_description">Dark colors, simple graphics</string>
    <string name="light_plain_keyboard_theme_name">Plain light theme</string>
    <string name="light_plain_keyboard_theme_description">Light colors, simple graphics</string>
    <string name="blacktheme_keyboard_theme_name">Simple black glow</string>
    <string name="blacktheme_keyboard_theme_description">Simple black theme with color highlights</string>
    <string name="lean_dark_keyboard_theme_name">Lean Dark</string>
    <string name="lean_dark_keyboard_theme_description">Dark theme, with minimal UI elements</string>
    <string name="lean_dark_2_keyboard_theme_name">Lean Dark - Option 2</string>
    <string name="eng_dictionary">English</string>
    <string name="ak_keyboard">Akan keyboard</string>
    <string name="ga_keyboard">Ga keyboard</string>
    <string name="ee_keyboard">Ewe keyboard</string>
    <string name="ak_dictionary">Akan</string>
    <string name="ha_keyboard">Hausa keyboard</string>
    <string name="plain_afro_theme_name">Afro Theme</string>
    <string name="plain_afro_theme_description">Afro colors, simple graphics</string>
    <string name="akan_dictionary">Akan Dictionary</string>
</resources>