<?xml version="1.0" encoding="UTF-8"?>
<KeyboardThemes>

    <KeyboardTheme
        id="bbeaca0e-71fe-4fbb-bdc1-34b709334dbb"
        description="@string/plain_afro_theme_description"
        iconsThemeRes="@style/KasahorowKeyboardForAndroidIconTheme"
        index="1"
        nameResId="@string/plain_afro_theme_name"
        popupThemeRes="@style/AfroKasahorowKeyboardForAndroidPopup"
        themeRes="@style/AfroKasahorowKeyboardForAndroid"
        themeScreenshot="@drawable/light_theme_screenshot" />
    <KeyboardTheme
        id="79809d30-2919-4ae6-a9ec-94fd4bb6bd92"
        description="@string/light_plain_keyboard_theme_description"
        iconsThemeRes="@style/AnyKeyboardBaseKeyIconTheme"
        index="2"
        nameResId="@string/light_plain_keyboard_theme_name"
        popupThemeRes="@style/PlainLightAnySoftKeyboardPopup"
        themeRes="@style/PlainLightAnySoftKeyboard"
        themeScreenshot="@drawable/light_theme_screenshot" />
    <KeyboardTheme
        id="ac8ea510-ca66-11e1-9b23-0800200c9a66"
        description="@string/lean_dark_keyboard_theme_description"
        iconsThemeRes="@style/AnyKeyboardBaseKeyIconTheme"
        index="3"
        nameResId="@string/lean_dark_keyboard_theme_name"
        popupThemeRes="@style/LeanDarkPopup"
        themeRes="@style/LeanDark"
        themeScreenshot="@drawable/lean_dark_theme_screenshot" />
    <KeyboardTheme
        id="48fa4f73-09aa-4eff-bd3b-c2c54d94159d"
        description="@string/gingerbread_keyboard_theme_description"
        iconsThemeRes="@style/GingerbreadKeyIconTheme"
        index="4"
        nameResId="@string/gingerbread_keyboard_theme_name"
        popupThemeRes="@style/GingerbreadPopup"
        themeRes="@style/Gingerbread"
        themeScreenshot="@drawable/gingerbread_theme_screenshot" />
    <KeyboardTheme
        id="55d9797c-850c-40a8-9a5d-7467b55bd537"
        description="@string/dark_plain_keyboard_theme_description"
        iconsThemeRes="@style/AnyKeyboardBaseKeyIconTheme"
        index="5"
        nameResId="@string/dark_plain_keyboard_theme_name"
        popupThemeRes="@style/PlainDarkAnySoftKeyboardPopup"
        themeRes="@style/PlainDarkAnySoftKeyboard"
        themeScreenshot="@drawable/dark_theme_screenshot" />
    <KeyboardTheme
        id="EC93C810-4FC5-4FC3-8CE4-1CDA44680A0D"
        description="@string/blacktheme_keyboard_theme_description"
        iconsThemeRes="@style/AnyKeyboardBaseKeyIconTheme"
        index="6"
        nameResId="@string/blacktheme_keyboard_theme_name"
        popupThemeRes="@style/PlainBlackAnySoftKeyboardPopup"
        themeRes="@style/PlainBlackAnySoftKeyboard"
        themeScreenshot="@drawable/blacktheme_screenshot" />
    <KeyboardTheme
        id="28860f10-cf16-11e1-9b23-0800200c9a66"
        description="@string/lean_dark_keyboard_theme_description"
        iconsThemeRes="@style/AnyKeyboardBaseKeyIconTheme"
        index="7"
        nameResId="@string/lean_dark_2_keyboard_theme_name"
        popupThemeRes="@style/LeanDarkPopup2"
        themeRes="@style/LeanDark2"
        themeScreenshot="@drawable/lean_dark_theme_screenshot" />

</KeyboardThemes>