<?xml version="1.0" encoding="UTF-8"?>
<Dictionaries>

    <!--
	id := a UUID (you may want to generate this using our simple Java program at:  /trunk/project/dict_creation (uuidgen_Windows.bat or uuidgen_Linux)
	locale := a locate identifier for this dictionary. E.g., English will be en, Hebrew will be iw, etc.
	nameResId := the resource Id which holds the name of the dictionary. See strings.xml.
	type := currently we only support binary dictionaries.
	dictionaryAssertName := the binary data holder
	description := some text you would like to add.
    -->
    <Dictionary
        id="00dd1bf8-bac1-4b2c-98fe-b380df19f55a"
        autoTextResourceId="@xml/en_autotext"
        description="@string/akan_dictionary"
        dictionaryResourceId="@array/words_dict_array"
        locale="ak"
        nameResId="@string/ak_dictionary"
        type="binary_resource" />
    <Dictionary
        id="8a678ccc-b62a-41e3-9d1b-0023bf710b2b"
        autoTextResourceId="@xml/en_autotext"
        description=""
        dictionaryResourceId="@array/en_words_dict_array"
        locale="en"
        nameResId="@string/eng_dictionary"
        type="binary_resource" />

</Dictionaries>